ajout création user

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<div class="collapse navbar-collapse">Texte</div>
 <div><button id = "newTache" (click) = "toAddTache()" >Nouvelle tâche</button></div>
 <table *ngFor="let tache of taches">
   <tr>
