--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,3 +2,13 @@ label{
     display: block;
     margin: 10px;
 }
+
+button{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+}
+
+a{
+    cursor: pointer;
+}
