--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,16 @@
-#container{
-    margin:auto;
-    width:35%;
-    padding:10px;
-    background-color: #FAf0DC;
-}
+
 
 @media screen and (max-width: 480px) {
   #container{
     width:95%
+  }
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  #container{
+    margin:auto;
+    width:35%;
+    padding:10px;
+    background-color: #FAf0DC;
   }
 }
