--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,25 +1,29 @@
-td{
-    padding:10px;
-}
+@media screen and (-webkit-min-device-pixel-ratio:0) {
 
-td:nth-of-type(1){
-    min-width:80%;
-}
-tr{
-    border: 1px dotted;
-    border-radius: 5px;
-    
-}
+    td{
+        padding:10px;
+    }
 
-.cross{
-    text-decoration: line-through;
-}
+    td:nth-of-type(1){
+        min-width:80%;
+    }
 
-#newTache{
-    margin:10px;
-}
+    tr{
+        border: 1px dotted;
+        border-radius: 5px;
+        
+    }
 
-table{
-    margin:auto;
-    margin:10px;
+    .cross{
+        text-decoration: line-through;
+    }
+
+    #newTache{
+        margin:10px;
+    }
+
+    table{
+        margin:auto;
+        margin:10px;
+    }
 }
