--- a/src/app/modify-tache/modify-tache.component.html
+++ b/src/app/modify-tache/modify-tache.component.html
@@ -1,10 +1,10 @@
-<div class="collapse navbar-collapse">Texte</div>
+<app-logout></app-logout>
 <div>
   <h1>Modifier une tâche existante</h1>
   <form [formGroup]="notesModForm" novalidate>
     <div class="form-group">
       <label class="center-block">Titre:
-        <input class="form-control" formControlName="title"  [(ngModel)]="tache.title">
+        <input class="form-control" formControlName="title"  [(ngModel)]="tache.title" [ngClass]="{ 'is-invalid': submitted && f['title'].errors }">
         <div *ngIf="submitted && f['title'].errors" class="invalid-feedback">
           <div *ngIf="f['title'].errors['required']">Le titre est requis</div>
         </div>
@@ -12,8 +12,13 @@
       <label class="center-block">Contenu:
         <textarea class="form-control" formControlName="description" [(ngModel)]="tache.description"></textarea>
       </label>
-      <button type="submit" id="nouvelle" (click)="modifyTache(tache)">
+      <button type="submit" id="nouvelle" (click)="modifyTache(tache)" class="btn btn-success">
             Enregistrer
+      </button>
+      <button (click)="toList()" class="btn btn-success">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-square-fill" viewBox="0 0 16 16">
+          <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z"/>
+        </svg>
       </button>
     </div>
   </form>
